--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body{
   background-color: rgb(240, 238, 235); /* Light background color */
   background-image: radial-gradient(rgba(0, 0, 0, 0.02) 1px, rgba(0, 0, 0, 0) 1px); /* Light radial gradient */
   background-size: 4px 4px; 
+  overflow-x: hidden;
 }
 
 
