--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@ body{
   background-image: radial-gradient(rgba(0, 0, 0, 0.02) 1px, rgba(0, 0, 0, 0) 1px); /* Light radial gradient */
   background-size: 4px 4px; 
   overflow-x: hidden;
+  scroll-behavior: smooth;
+  
 }
 
 
