--- a/src/index.css
+++ b/src/index.css
@@ -11,14 +11,15 @@
   outline: none;
 }
 
+html{
+  scroll-behavior: smooth;
+}
 
 body{
   background-color: rgb(240, 238, 235); /* Light background color */
   background-image: radial-gradient(rgba(0, 0, 0, 0.02) 1px, rgba(0, 0, 0, 0) 1px); /* Light radial gradient */
   background-size: 4px 4px; 
   overflow-x: hidden;
-  scroll-behavior: smooth;
-  
 }
 
 
